Updated for ratesapi.io

--- a/DemoRatesAPI/src/test/resources/config.properties
+++ b/DemoRatesAPI/src/test/resources/config.properties
@@ -1,5 +1,8 @@
-baseURI = http://data.fixer.io/api
-access_key = 155b1229bfda3fcc97825158916cfc16
+baseURI = https://ratesapi.io/api
+access_key = ******************
 pathLatest = /latest
 pathHistoric = /{historic}
 pathInvalid = /invalid/path
+
+testURI = http://data.fixer.io/api
+access_key = *********************
