--- a/DemoRatesAPI/pom.xml
+++ b/DemoRatesAPI/pom.xml
@@ -7,6 +7,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cucumber.version>5.5.0</cucumber.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -54,36 +56,5 @@
 			<version>1.0.10</version>
 		</dependency>		
   </dependencies>
-  
-  	<build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
-            </plugin>			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-				<!--  
-					<includes>
-						<include>runner.TestRunner.java</include>
-					</includes>
-				-->
-				</configuration>
-			</plugin>			
-        </plugins>
-    </build>
-    
+     
 </project>
